<resources>
    <string name="app_name">Taps</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="facebook_app_id">285569405265251</string>
    <string name="title_activity_sign_up">Sign in</string>
    <string name="title_activity_car_list">CarListActivity</string>

    <string name="action_settings">Settings</string>
    <string name="button_send" />
    <string name="title_activity_sigining_up">Begin Sigining Up Process</string>
    <string name="txtSigningUp">Please Begin the sign up process below.</string>
    <string name="txtApplicant" />
    <string name="txtApplicaant">Applicant Information</string>
    <string name="txtName">Name:____________________</string>
    <string name="txtFirst">First Name:</string>
    <string name="txtLast">Last Name:</string>
    <string name="txtDOB">Date Of Birth:</string>
    <string name="txtAddress">Current Address:</string>
    <string name="btn_Next">Next</string>
    <string name="txtEmpolyerinfo">Empolyment Information</string>
    <string name="txtEmpolyer">Empolyer Name:</string>
    <string name="txtHow">Length (how long):</string>
    <string name="txtAnnual">Annual</string>
    <string name="txtAnnualI">Annual Income</string>
    <string name="txtIncome">Annual Income:</string>
    <string name="btnNext2">Next</string>
    <string name="txtEmger">Emergency Contact</string>
    <string name="txtContact">Emergency Contact</string>
    <string name="txtEmerg">Emergency Contact</string>
    <string name="txtEmgC" />
    <string name="txtEmgCon">Emergency Contact:</string>
    <string name="txtRela">Relationship:</string>
    <string name="txtRname" />
    <string name="txtrelname">First and Last Name:</string>
    <string name="txtHome">Home Phone Number:</string>
    <string name="btnNext3">Next</string>
    <string name="txtCosigner">Co-Signer(if applicable):</string>
    <string name="txtName4" />
    <string name="txtName5">First and Name:</string>
    <string name="txtDOB2">Date Of Birth:</string>
    <string name="txtEm">Empolyer:</string>
    <string name="txtEmp">Empolyers Number:</string>

</resources>
