<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
>

<TextView
    android:id="@+id/textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"

    android:layout_centerHorizontal="true"
    android:text="@string/txtSigningUp" />

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/textView"
    android:text="@string/txtApplicaant"
    android:textAppearance="?android:attr/textAppearanceLarge" />

<TextView
    android:id="@+id/IbIOutput"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/textView2"
    android:layout_marginTop="36dp"
    android:text="@string/txtFirst"
    android:textAppearance="?android:attr/textAppearanceSmall" />

<EditText
    android:id="@+id/txtInput"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/textView4"
    android:layout_alignEnd="@+id/editText3"
    android:layout_alignLeft="@+id/editText2"
    android:layout_alignRight="@+id/editText3"
    android:layout_alignStart="@+id/editText2" />

<TextView
    android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/IbIOutput"
    android:layout_marginTop="43dp"
    android:text="@string/txtLast"
    android:textAppearance="?android:attr/textAppearanceSmall" />

<EditText
    android:id="@+id/editText3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/textView4"
    android:layout_alignEnd="@+id/editText2"
    android:layout_alignRight="@+id/editText2"
    android:layout_toEndOf="@+id/textView5"

    android:layout_toRightOf="@+id/textView5" />

<TextView
    android:id="@+id/textView5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/textView4"
    android:layout_marginTop="54dp"
    android:text="@string/txtDOB"
    android:textAppearance="?android:attr/textAppearanceSmall" />

<EditText
    android:id="@+id/editText2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/editText"
    android:layout_alignEnd="@+id/editText"
    android:layout_alignRight="@+id/editText"
    android:layout_toEndOf="@+id/textView5"
    android:layout_toRightOf="@+id/textView5" />

<TextView
    android:id="@+id/textView6"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/editText"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:text="@string/txtAddress"
    android:textAppearance="?android:attr/textAppearanceSmall" />

<EditText
    android:id="@+id/editText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/textView5"
    android:layout_marginTop="29dp"
    android:layout_toEndOf="@+id/textView6"
    android:layout_toRightOf="@+id/textView6"
    android:ems="10"
    android:inputType="textPostalAddress" />

<Button
    android:id="@+id/btnNext"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="nextPage"

    android:text="@string/btn_Next"
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:layout_marginBottom="11dp" />
</RelativeLayout>
